# ansible-role-avideo

./: .ansible-lint.yml  README.md  pyproject.toml  requirements.yml  test.yml
.github/workflows/: main.yml  molecule.yml  release.yml
defaults/: main.yml
meta/: main.yml
molecule/common/: converge.yml  destroy.yml  verify.yml
molecule/default/: molecule.yml  side_effect.yml
molecule/default/tests/: test_default.py
molecule/users/: converge.yml  molecule.yml  requirements.yml  side_effect.yml
tasks/: main.yml
templates/: backup.sh.j2  php.ini.j2  restore.sh.j2  vhost.conf.j2
