[tool.poetry]
name = "nephelaiio.avideo"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^6.6.0"
molecule = {extras = ["docker"], version = "^4.0.3"}
ansible-lint = "^6.8.6"
MarkupSafe = "2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
